examples/neg/toplevel_effects.effekt
def sayHello(): Unit / { Console } =
  println("Hello World!")

def pureFun(): Unit / {} = sayHello()

def main() = ()
